specify MNIST data path

--- a/1.1 Deep vs Shallow/1.1 Train Actual Task/MNIST_train_CNN_output.ipynb
+++ b/1.1 Deep vs Shallow/1.1 Train Actual Task/MNIST_train_CNN_output.ipynb
@@ -234,8 +234,8 @@
       ],
       "source": [
         "# MNIST dataset\n",
-        "train_dataset = torchvision.datasets.MNIST(root='./data', train=True, transform=transforms.ToTensor())#, download=True)\n",
-        "test_dataset = torchvision.datasets.MNIST(root='./data', train=False, transform=transforms.ToTensor())\n",
+        "train_dataset = torchvision.datasets.MNIST(root='../data', train=True, transform=transforms.ToTensor(), download=True)\n",
+        "test_dataset = torchvision.datasets.MNIST(root='../data', train=False, transform=transforms.ToTensor())\n",
         "\n",
         "# Data loaders\n",
         "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True)\n",
