--- a/1.2 Optimization/optimization_visualization.ipynb
+++ b/1.2 Optimization/optimization_visualization.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: 'dlopen(/Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torchvision/image.so, 0x0006): Symbol not found: __ZN3c106detail19maybe_wrap_dim_slowIxEET_S2_S2_b\n",
-      "  Referenced from: <E03EDA44-89AE-3115-9796-62BA9E0E2EDE> /Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torchvision/image.so\n",
-      "  Expected in:     <F2FE5CF8-5B5B-3FAD-ADF8-C77D90F49FC9> /Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torch/lib/libc10.dylib'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Import libraries\n",
     "import torch\n",
@@ -39,7 +28,9 @@
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -175,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +219,7 @@
     "    # Training loop\n",
     "    total_loss = []\n",
     "    total_accuracy = []\n",
-    "    model_weights = []\n",
+    "    model_weights = pd.DataFrame()\n",
     "    for epoch in range(num_epochs):\n",
     "        train_loss = 0.0\n",
     "\n",
@@ -256,8 +247,13 @@
     "        print(f\"train loss: {train_loss}\")\n",
     "\n",
     "        # Collect parameters\n",
-    "        weights = [p.data.clone() for p in model.parameters()]\n",
-    "        model_weights.append(weights)\n",
+    "        #weights = [p.data.clone() for p in model.parameters()]\n",
+    "        temp_wts = pd.DataFrame()\n",
+    "        for name, parameter in model.named_parameters():\n",
+    "            if 'weight' in name:\n",
+    "                weights = torch.nn.utils.parameters_to_vector(parameter).detach().numpy()\n",
+    "                temp_wts = pd.concat([temp_wts, pd.DataFrame(weights).T], axis = 1)\n",
+    "        model_weights = pd.concat([model_weights,temp_wts], axis = 0)\n",
     "        \n",
     "        #Validation\n",
     "        model.eval()\n",
@@ -286,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss: 0.6659037470817566\n",
-      "Accuracy of the network on the 10000 test images: 90.07 %\n",
-      "train loss: 0.3051297962665558\n",
-      "Accuracy of the network on the 10000 test images: 92.88 %\n"
+      "train loss: 0.6640022397041321\n",
+      "Accuracy of the network on the 10000 test images: 89.44 %\n",
+      "train loss: 0.3324921429157257\n",
+      "Accuracy of the network on the 10000 test images: 91.27 %\n"
      ]
     }
    ],
@@ -323,71 +319,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>110</th>\n",
+       "      <th>111</th>\n",
+       "      <th>112</th>\n",
+       "      <th>113</th>\n",
+       "      <th>114</th>\n",
+       "      <th>115</th>\n",
+       "      <th>116</th>\n",
+       "      <th>117</th>\n",
+       "      <th>118</th>\n",
+       "      <th>119</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.017343</td>\n",
+       "      <td>0.021597</td>\n",
+       "      <td>0.014921</td>\n",
+       "      <td>-0.006585</td>\n",
+       "      <td>0.02876</td>\n",
+       "      <td>-0.015732</td>\n",
+       "      <td>-0.02706</td>\n",
+       "      <td>0.008684</td>\n",
+       "      <td>0.025726</td>\n",
+       "      <td>0.010219</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.310360</td>\n",
+       "      <td>0.212175</td>\n",
+       "      <td>-0.463013</td>\n",
+       "      <td>-0.086952</td>\n",
+       "      <td>-0.054553</td>\n",
+       "      <td>-0.310401</td>\n",
+       "      <td>-0.168169</td>\n",
+       "      <td>-0.198375</td>\n",
+       "      <td>-0.051436</td>\n",
+       "      <td>-0.075317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.017343</td>\n",
+       "      <td>0.021597</td>\n",
+       "      <td>0.014921</td>\n",
+       "      <td>-0.006585</td>\n",
+       "      <td>0.02876</td>\n",
+       "      <td>-0.015732</td>\n",
+       "      <td>-0.02706</td>\n",
+       "      <td>0.008684</td>\n",
+       "      <td>0.025726</td>\n",
+       "      <td>0.010219</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.337829</td>\n",
+       "      <td>0.183253</td>\n",
+       "      <td>-0.523511</td>\n",
+       "      <td>-0.100517</td>\n",
+       "      <td>-0.039485</td>\n",
+       "      <td>-0.356180</td>\n",
+       "      <td>-0.123563</td>\n",
+       "      <td>-0.203787</td>\n",
+       "      <td>0.033116</td>\n",
+       "      <td>-0.178729</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 15391 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0         1         2         3        4         5        6    \\\n",
+       "0  0.017343  0.021597  0.014921 -0.006585  0.02876 -0.015732 -0.02706   \n",
+       "0  0.017343  0.021597  0.014921 -0.006585  0.02876 -0.015732 -0.02706   \n",
+       "\n",
+       "        7         8         9    ...       110       111       112       113  \\\n",
+       "0  0.008684  0.025726  0.010219  ...  0.310360  0.212175 -0.463013 -0.086952   \n",
+       "0  0.008684  0.025726  0.010219  ...  0.337829  0.183253 -0.523511 -0.100517   \n",
+       "\n",
+       "        114       115       116       117       118       119  \n",
+       "0 -0.054553 -0.310401 -0.168169 -0.198375 -0.051436 -0.075317  \n",
+       "0 -0.039485 -0.356180 -0.123563 -0.203787  0.033116 -0.178729  \n",
+       "\n",
+       "[2 rows x 15391 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(type(m1_weights))"
+    "m1_weights.head()\n",
+    "#wts = np.array(m1_weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([12, 23])\n"
+      "[784, 17, 26, 25, 23, 12]\n",
+      "15391\n"
      ]
     }
    ],
    "source": [
-    "print(m1_weights[1][8].shape)"
+    "# check model parameter number\n",
+    "model1_parameters = []\n",
+    "for name, param in model1.named_parameters():\n",
+    "    if 'weight' in name:\n",
+    "        model1_parameters.append(param.T.shape[0])\n",
+    "print(model1_parameters)\n",
+    "sum = 0\n",
+    "for l in range(0,len(model1_parameters)-1):\n",
+    "    sum += model1_parameters[l] * model1_parameters[l+1]\n",
+    "sum += model1_parameters[-1]*10 # last output layer\n",
+    "print(sum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0, event 0; is size torch.Size([17, 784])\n",
-      "epoch 0, event 1; is size torch.Size([17])\n",
-      "epoch 0, event 2; is size torch.Size([26, 17])\n",
-      "epoch 0, event 3; is size torch.Size([26])\n",
-      "epoch 0, event 4; is size torch.Size([25, 26])\n",
-      "epoch 0, event 5; is size torch.Size([25])\n",
-      "epoch 0, event 6; is size torch.Size([23, 25])\n",
-      "epoch 0, event 7; is size torch.Size([23])\n",
-      "epoch 0, event 8; is size torch.Size([12, 23])\n",
-      "epoch 0, event 9; is size torch.Size([12])\n",
-      "epoch 0, event 10; is size torch.Size([10, 12])\n",
-      "epoch 0, event 11; is size torch.Size([10])\n",
-      "epoch 1, event 0; is size torch.Size([17, 784])\n",
-      "epoch 1, event 1; is size torch.Size([17])\n",
-      "epoch 1, event 2; is size torch.Size([26, 17])\n",
-      "epoch 1, event 3; is size torch.Size([26])\n",
-      "epoch 1, event 4; is size torch.Size([25, 26])\n",
-      "epoch 1, event 5; is size torch.Size([25])\n",
-      "epoch 1, event 6; is size torch.Size([23, 25])\n",
-      "epoch 1, event 7; is size torch.Size([23])\n",
-      "epoch 1, event 8; is size torch.Size([12, 23])\n",
-      "epoch 1, event 9; is size torch.Size([12])\n",
-      "epoch 1, event 10; is size torch.Size([10, 12])\n",
-      "epoch 1, event 11; is size torch.Size([10])\n"
+      "epoch 0, event 0; is size (13328,)\n",
+      "epoch 0, event 1; is size (442,)\n",
+      "epoch 0, event 2; is size (650,)\n",
+      "epoch 0, event 3; is size (575,)\n",
+      "epoch 0, event 4; is size (276,)\n",
+      "epoch 0, event 5; is size (120,)\n",
+      "epoch 1, event 0; is size (13328,)\n",
+      "epoch 1, event 1; is size (442,)\n",
+      "epoch 1, event 2; is size (650,)\n",
+      "epoch 1, event 3; is size (575,)\n",
+      "epoch 1, event 4; is size (276,)\n",
+      "epoch 1, event 5; is size (120,)\n"
      ]
     }
    ],
