random shuffle labels

--- a/1.3 Generalization/random_labels.ipynb
+++ b/1.3 Generalization/random_labels.ipynb
@@ -8,20 +8,302 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries and Set Device"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Import libraries\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Device configuration\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Device\", device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyperparameters and Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hyperparameters\n",
+    "#input_size = 784  # 28x28 flattened images\n",
+    "num_classes = 10\n",
+    "num_epochs = 30\n",
+    "batch_size = 64\n",
+    "learning_rate = 0.001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MNIST dataset\n",
+    "train_dataset = torchvision.datasets.MNIST(root='../data', train=True, transform=transforms.ToTensor(), download=True)\n",
+    "test_dataset = torchvision.datasets.MNIST(root='../data', train=False, transform=transforms.ToTensor())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### shuffle labels\n",
+    "train_images = torch.tensor(()).to(device)\n",
+    "train_labels = []\n",
+    "for image, label in train_dataset:\n",
+    "    train_images = torch.cat((train_images,image.to(device)),0)\n",
+    "    train_labels.append(label)\n",
+    "test_images = torch.tensor(())\n",
+    "test_labels = list([]).to(device)\n",
+    "for image, lable in test_dataset:\n",
+    "    test_images = torch.cat((test_images,image.to(device)),0)\n",
+    "    test_labels.append(label)\n",
+    "train_labels = random.shuffle(train_labels.to(device))\n",
+    "test_labels = random.shuffle(test_labels.to(device))\n",
+    "print(train_images.shape)\n",
+    "print(test_images.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data loaders\n",
+    "train_loader = torch.utils.data.DataLoader(dataset=TensorDataset(train_images,train_labels), batch_size=batch_size, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(dataset=TensorDataset(test_images,test_labels), batch_size=batch_size, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose an image index\n",
+    "image_index = 5  # You can change this to any valid index\n",
+    "\n",
+    "# Get the image and label\n",
+    "image, label = train_dataset[image_index]\n",
+    "\n",
+    "# Convert the image tensor to a numpy array\n",
+    "image_array = image.numpy()\n",
+    "\n",
+    "# Reshape the array to 28x28\n",
+    "image_array = image_array.reshape(28, 28)\n",
+    "\n",
+    "# Display the image\n",
+    "plt.imshow(image_array, cmap='gray')\n",
+    "plt.title(f\"Label: {label}\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CNN model\n",
+    "class CNN(nn.Module):\n",
+    "    def __init__(self, num_classes, out_channels_1, out_channels_2):\n",
+    "        super(CNN, self).__init__()\n",
+    "        self.conv1 = nn.Sequential(nn.Conv2d(in_channels=1, out_channels=out_channels_1, kernel_size=3, padding=1),\n",
+    "                                   nn.MaxPool2d(kernel_size=2),\n",
+    "                                   nn.ReLU())\n",
+    "        self.conv2 = nn.Sequential(nn.Conv2d(in_channels=out_channels_1, out_channels=out_channels_2,\n",
+    "                                             kernel_size=3, padding=1),\n",
+    "                                   nn.MaxPool2d(kernel_size=2),\n",
+    "                                   nn.ReLU())\n",
+    "        self.fc = nn.Linear(out_channels_2 * 7 * 7, num_classes)  # Assuming input images are 28x28\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "       x = self.conv1(x)\n",
+    "       x = self.conv2(x)\n",
+    "       x = x.view(x.size(0), -1)\n",
+    "       x = self.fc(x)\n",
+    "       return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train and Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### training function\n",
+    "def train_eval(model, num_epochs, learning_rate, train_loader, test_loader):\n",
+    "    # model to device\n",
+    "    model = model.to(device)\n",
+    "    # Loss and optimizer\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "    # Training loop\n",
+    "    total_loss = []\n",
+    "    total_accuracy = []\n",
+    "    for epoch in range(num_epochs):\n",
+    "        train_loss = 0.0\n",
+    "\n",
+    "        #Training\n",
+    "        model.train()\n",
+    "        for images, labels in train_loader:\n",
+    "            images = images.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "\n",
+    "            # Zero out Gradient\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            # Forward pass\n",
+    "            outputs = model(images)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "\n",
+    "            # Backward pass and optimization\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            train_loss += loss * images.size(0)\n",
+    "\n",
+    "        train_loss = train_loss/len(train_loader.sampler)\n",
+    "        total_loss.append(train_loss)\n",
+    "        print(f\"train loss: {train_loss}\")\n",
+    "\n",
+    "        #Validation\n",
+    "        model.eval()\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        with torch.no_grad():\n",
+    "            for images, labels in test_loader:\n",
+    "                images = images.to(device)\n",
+    "                labels = labels.to(device)\n",
+    "                outputs = model(images)\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total += labels.size(0)\n",
+    "                correct += (predicted == labels).sum().item()\n",
+    "        accuracy = 100 * correct / total\n",
+    "        total_accuracy.append(accuracy)\n",
+    "        print('Accuracy of the network on the 10000 test images: {} %'.format(100 * correct / total))\n",
+    "    return total_loss, total_accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CNN_1 = CNN(num_classes=num_classes, out_channels_1=16, out_channels_2=32).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Train models\n",
+    "CNN_1_loss, CNN_1_accuracy = train_eval(model = CNN_1, num_epochs=num_epochs, learning_rate=learning_rate,\n",
+    "                                        train_loader=train_loader, test_loader=test_loader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loss Plot\n",
+    "CNN_1_loss = torch.tensor(CNN_1_loss).cpu().data.numpy()\n",
+    "plt.plot(np.arange(0, len(CNN_1_loss), 1), CNN_1_loss, label = \"CNN_1 Loss\", color = \"blue\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Accuracy Plot\n",
+    "plt.plot(np.arange(0, len(CNN_1_accuracy), 1), np.array(CNN_1_accuracy), label = \"CNN_1 Accuracy\", color = \"blue\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
