--- a/1.1 Deep vs Shallow/1.1 Simulate Function/simulate_fn_2.ipynb
+++ b/1.1 Deep vs Shallow/1.1 Simulate Function/simulate_fn_2.ipynb
@@ -471,12 +471,14 @@
         "plt.plot(x_test.cpu().detach(), y_pred2.cpu().detach(), label=\"Model 2\", color = 'blue', linestyle = 'dashed')\n",
         "plt.plot(x_test.cpu().detach(), y_pred3.cpu().detach(), label=\"Model 3\", color = 'green', linestyle = 'dashed')\n",
         "plt.legend()\n",
+        "plt.savefig(\"fn2_pred_output.png\")\n",
         "plt.show()\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model1_loss), label=\"Model 1 loss\", color = 'orange')\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model2_loss), label=\"Model 2 loss\", color = 'blue')\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model3_loss), label=\"Model 3 loss\", color = 'green')\n",
         "plt.ylim(10**-5, 10)\n",
         "plt.legend()\n",
+        "plt.savefig(\"fn2_loss_output.png\")\n",
         "plt.show()"
       ]
     },
