--- a/Homework 1 report.ipynb
+++ b/Homework 1 report.ipynb
@@ -44,7 +44,11 @@
    "source": [
     "The loss for all models are shown in the plot below:\n",
     "\n",
-    "![fn1loss](./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn1_loss_output.png)"
+    "![fn1loss](./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn1_loss_output.png)\n",
+    "\n",
+    "The predicted function curve of all the models is shown in the plot below along with the ground-truth curve:\n",
+    "\n",
+    "![fn1pred](./1.1%20Deep%20vs%20Shallow/1.1%20Simulate%20Function/fn1_pred_output.png)"
    ]
   },
   {
