--- a/Homework 1 report.ipynb
+++ b/Homework 1 report.ipynb
@@ -31,7 +31,15 @@
     "* Model 2: DNN with 5 hidden layers of sizes 17, 26, 25, 23, and 12. Total of 2076 parameters\n",
     "* Model 3: DNN with 1 hidden layer of size 692. Total of 2077 parameters\n",
     "\n",
-    "All models were trained for 100 epochs and I fine tuned for batch size and learning rate on all models. The optimal hyperparameters were:\n",
+    "All models were trained for 100 epochs and I fine tuned for batch size and learning rate on all models. \n",
+    "\n",
+    "For function 1, we are simulating the function,\n",
+    "\n",
+    "$$\n",
+    "f(x) = 5\\sin^2(\\frac{x}{2})\n",
+    "$$\n",
+    "\n",
+    "The optimal hyperparameters were:\n",
     "\n",
     "* Model 1: batch_size = 8, learning_rate = 0.001\n",
     "* Model 2: batch_size = 16, learning_rate = 0.001\n",
@@ -55,7 +63,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For function 2, we simulated the function,\n",
+    "\n",
+    "$$\n",
+    "f(x) = \\frac{x^3e^{(x/10)}}{15}\n",
+    "$$\n",
+    "\n",
+    "The optimal hyperparameters were..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that all models seemed to approximate the function fairly well. However, Model 3 slightly misses the curve at the endpoints. Model 3 is the shallowest of all the models, so it is intuitive that it could have more error than the other models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Train on Actual Task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For traininig on an acutal task, I chose to train on the MNIST dataset. The models I used were:\n",
+    "\n",
+    "* Model 1:\n",
+    "* Model 2:\n",
+    "* Model 3:"
    ]
   },
   {
